--- a/css/less/style.less
+++ b/css/less/style.less
@@ -74,4 +74,14 @@ body {
     }
   }
 
+  .bottom-menu {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+  }
+
+  .button-lg-icon {
+    top: 0!important;
+  }
+
 }
