--- a/views/show.html
+++ b/views/show.html
@@ -28,4 +28,7 @@
             <p class="rating"> {{ episode.Rating }}</p>
         </div>
     </div>
+    <div class="bottom-menu">
+        <button class="btn btn-fab btn-raised btn-material-red" ng-click="open()"><i class="mdi-content-add button-lg-icon"></i></button>
+    </div>
 </div>
