--- a/views/show.html
+++ b/views/show.html
@@ -29,6 +29,7 @@
         </div>
     </div>
     <div class="bottom-menu">
+        <button class="btn btn-fab btn-fab-mini btn-raised btn-sm btn-success" ng-click="addShowModal()"><i class="mdi-content-add-circle-outline"></i></button>
         <button class="btn btn-fab btn-raised btn-material-red" ng-click="open()"><i class="mdi-content-add button-lg-icon"></i></button>
     </div>
 </div>
