--- a/views/forms/editshow.html
+++ b/views/forms/editshow.html
@@ -19,7 +19,7 @@
             <label for="showImdbId" class="col-md-3 control-label">Show Imdb id</label>
 
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="show.ImdbID" id="showImdbId" placeholder="Imdb id">
+                <input type="text" class="form-control" data-ng-model="show.ImdbID" id="showImdbId" placeholder="Imdb id" disabled>
             </div>
         </div>
         <div class="form-group row">
@@ -37,5 +37,4 @@
         </div>
         <input type="hidden" data-ng-model="show.ShowID" id="ShowID">
     </div>
-
 </form>
