--- a/css/less/style.less
+++ b/css/less/style.less
@@ -66,6 +66,16 @@ body {
     }
   }
   .show-wrapper {
+    .sm-btn-icon{
+      i{
+        left: -5px;
+      }
+    }
+    .show-content {
+      .name {
+        font-size: 20px;
+      }
+    }
     .shows {
       img {
         width: 100%;
