--- a/views/allshows.html
+++ b/views/allshows.html
@@ -25,4 +25,6 @@
     <div class="bottom-menu">
         <button class="btn btn-fab btn-raised btn-material-red" ng-click="open()"><i class="mdi-content-add button-lg-icon"></i></button>
     </div>
+    <button class="btn btn-default btn-flat" ng-click="notify()"><i class="mdi-navigation-close"></i> Notify</button>
+
 </div>
