--- a/views/show.html
+++ b/views/show.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="content col-md-9">
-                <p class="name">{{ episode.Name }}</p>
+                <p class="name"><a href="#show/{{ show.ImdbID}}/{{ episode.SeasonNr }}/{{ episode.EpImdbId}} ">{{episode.Name }}</a></p>
 
                 <p class="rating"> Rating: {{ episode.Rating }}</p>
 
