--- a/css/less/style.less
+++ b/css/less/style.less
@@ -7,6 +7,10 @@ body {
     color: #ffffff;
     height: 120px;
     background-color: #212121;
+    .log-in {
+      font-size: 18px;
+      margin: 15px;
+    }
   }
 
   .tiles {
@@ -93,5 +97,9 @@ body {
   .button-lg-icon {
     top: 0!important;
   }
-
+  .login-wrapper {
+    text-align: center;
+    input {
+    }
+  }
 }
