--- a/views/episode.html
+++ b/views/episode.html
@@ -5,6 +5,6 @@
 
     <div class="bottom-menu">
         <button class="btn btn-fab btn-raised btn-material-red" ng-click="editShow()"><i
-                class="mdi-content-add button-lg-icon"></i></button>
+                class="mdi-image-edit button-lg-icon"></i></button>
     </div>
 </div>
