--- a/views/show.html
+++ b/views/show.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox">
+                        <input type="checkbox"  ng-click="episodeCheck(episode.EpisodeId)">
                     </label>
                 </div>
             </div>
@@ -46,6 +46,6 @@
         <button class="btn btn-fab btn-fab-mini btn-raised btn-sm btn-success sm-btn-icon" ng-click="addShowModal()"><i
                 class="mdi-content-add-circle-outline"></i></button>
         <button class="btn btn-fab btn-raised btn-material-red" ng-click="open()"><i
-                class="mdi-content-add button-lg-icon"></i></button>
+                class="mdi-image-edit button-lg-icon"></i></button>
     </div>
 </div>
