--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body .header-panel {
   height: 120px;
   background-color: #212121;
 }
+body .header-panel .log-in {
+  font-size: 18px;
+  margin: 15px;
+}
 body .tiles {
   color: #FFFFFF;
   margin-top: 20px;
@@ -61,4 +65,7 @@ body .bottom-menu {
 }
 body .button-lg-icon {
   top: 0!important;
+}
+body .login-wrapper {
+  text-align: center;
 }
