--- a/views/allshows.html
+++ b/views/allshows.html
@@ -10,7 +10,7 @@
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox">
+                    <input type="checkbox"ng-click="showCheck(show.ShowId)" >
                 </label>
             </div>
         </div>
@@ -25,6 +25,5 @@
     <div class="bottom-menu">
         <button class="btn btn-fab btn-raised btn-material-red" ng-click="open()"><i class="mdi-content-add button-lg-icon"></i></button>
     </div>
-    <button class="btn btn-default btn-flat" ng-click="notify()"><i class="mdi-navigation-close"></i> Notify</button>
 
 </div>
