--- a/views/allshows.html
+++ b/views/allshows.html
@@ -10,7 +10,7 @@
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox"ng-click="showCheck(show.ShowId)" >
+                    <input type="checkbox"ng-click="showCheck(show.ShowId)" ng-checked="isThisUserShow(show.ShowId)">
                 </label>
             </div>
         </div>
