--- a/views/myshows.html
+++ b/views/myshows.html
@@ -1,17 +1,18 @@
 <div class="shows container tiles">
 
     <div class="col-md-3 wrapper " ng-repeat="show in shows">
+        {{show}}
         <div class="tile well show well-material-grey-800">
             <div class="image-wrapper">
                 <img ng-src="files/image/shield.jpg"/>
             </div>
             <div class="content-wrapper">
                 <p class="name">{{ show.Name }}</p>
-                <p class="rating"> Rating: {{show.Rating }}</p>
+                <p class="rating"> Rating: {{show.rating }}</p>
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox">
+                    <input type="checkbox" ng-click="showCheck(show.ShowID)" ng-checked="true">
                 </label>
             </div>
         </div>
