--- a/views/showSeason.html
+++ b/views/showSeason.html
@@ -16,4 +16,9 @@
             </div>
         </div>
     </div>
+    <div class="bottom-menu">
+        <button class="btn btn-fab btn-fab-mini btn-raised btn-sm btn-success sm-btn-icon"
+                ng-click="addEpisodeModal()"><i
+                class="mdi-content-add-circle-outline"></i></button>
+    </div>
 </div>
