--- a/views/forms/show.html
+++ b/views/forms/show.html
@@ -11,16 +11,20 @@
         </div>
         <div class="form-group row">
             <label for="showDescription" class="col-md-3 control-label">Show description</label>
-
             <div class="col-md-8">
                 <textarea class="form-control" data-ng-model="show.Description" rows="3" id="showDescription"></textarea>
             </div>
         </div>
         <div class="form-group row">
             <label for="showImdbId" class="col-md-3 control-label">Show Imdb id</label>
-
             <div class="col-md-8">
                 <input type="text" class="form-control" data-ng-model="show.ImdbID" id="showImdbId" placeholder="Imdb id">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="showImage" class="col-md-3 control-label">Show Image</label>
+            <div class="col-md-8">
+                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image">
             </div>
         </div>
         <div class="form-group row">
