--- a/views/showSeason.html
+++ b/views/showSeason.html
@@ -2,7 +2,7 @@
     <div class="col-md-3 wrapper " ng-repeat="episode in episodes">
         <div class="tile well show well-material-grey-800">
             <div class="image-wrapper">
-                <img ng-src="files/image/shield.jpg"/>
+                <img ng-src="{{episode.EpisodeImage}}"/>
             </div>
             <div class="content-wrapper">
                 <p class="name">{{ episode.Name }}</p>
