--- a/views/forms/episode.html
+++ b/views/forms/episode.html
@@ -20,6 +20,12 @@
             </div>
         </div>
         <div class="form-group row">
+            <label for="EpisodeImage" class="col-md-3 control-label">Episode image</label>
+            <div class="col-md-8">
+                <input type="text" class="form-control" data-ng-model="episode.EpisodeImage" id="EpisodeImage" placeholder="Episode image">
+            </div>
+        </div>
+        <div class="form-group row">
             <label for="season" class="col-md-3 control-label">Season Nr</label>
             <div class="col-md-8">
                 <input type="number" class="form-control" data-ng-model="episode.SeasonNr" id="season" placeholder="Season">
