--- a/views/show.html
+++ b/views/show.html
@@ -1,7 +1,7 @@
 <div class="show-wrapper container">
     <div class="show row">
         <div class="img-wrapper col-md-3">
-            <img src="files/image/shield.jpg"/>
+            <img ng-src="{{ show.ShowImage }}"/>
         </div>
         <div class="show-content col-md-8 well-lg">
             <p class="name">{{show.Name}} </p>
@@ -18,9 +18,10 @@
             <a href="#show/{{ show.ImdbID}}/{{ key }}"><h1>Season {{ key }}</h1></a>
 
             <div class="list-element tiles row shows" ng-repeat="episode in season">
+                {{episode}}
                 <div class="tile well show well-material-grey-800 col-md-2">
                     <div class="image-wrapper">
-                        <img ng-src="files/image/shield.jpg"/>
+                        <img ng-src="{{episode.EpisodeImage}}"/>
                     </div>
                     <div class="content-wrapper">
 
