--- a/views/showSeason.html
+++ b/views/showSeason.html
@@ -1,22 +1,25 @@
 <div class="season-wrapper container tiles">
-    <div class="col-md-3 wrapper " ng-repeat="episode in episodes">
-        <div class="tile well show well-material-grey-800">
+    <div class="col-md-3 wrapper tile" ng-repeat="episode in episodes">
+        <div class="tile-wrapper">
             <div class="image-wrapper">
                 <img ng-src="{{episode.EpisodeImage}}"/>
-            </div>
-            <div class="content-wrapper">
-                <p class="name">{{ episode.Name }}</p>
-
-                <p class="rating"> Rating: {{episode.Rating }}</p>
             </div>
             <div class="checkbox">
                 <label>
                     <input type="checkbox">
                 </label>
             </div>
+            <div class="content-wrapper">
+                <p class="name">{{ episode.Name }}</p>
+
+                <p class="rating"> Rating: {{episode.Rating }}</p>
+
+            </div>
+
         </div>
     </div>
-    <div class="bottom-menu">
+
+        <div class="bottom-menu">
         <button class="btn btn-fab btn-fab-mini btn-raised btn-sm btn-success sm-btn-icon"
                 ng-click="addEpisodeModal()"><i
                 class="mdi-content-add-circle-outline"></i></button>
