--- a/views/forms/editEpisode.html
+++ b/views/forms/editEpisode.html
@@ -14,6 +14,12 @@
             </div>
         </div>
         <div class="form-group row">
+            <label for="EpisodeImage" class="col-md-3 control-label">Episode image</label>
+            <div class="col-md-8">
+                <input type="text" class="form-control" data-ng-model="episode.EpisodeImage" id="EpisodeImage" placeholder="Episode image">
+            </div>
+        </div>
+        <div class="form-group row">
             <label for="episodeImdbId" class="col-md-3 control-label">Episode Imdb id</label>
             <div class="col-md-8">
                 <input type="text" class="form-control" data-ng-model="episode.EpImdbID" id="episodeImdbId" placeholder="Episode imdb id" disabled>
