--- a/css/less/style.less
+++ b/css/less/style.less
@@ -33,7 +33,7 @@ body {
     padding: 0;
     background: #424242;
     .content-wrapper {
-      margin: 5px 0px;
+      margin: 5px 0;
       padding: 0 10px;
       width: 86%;
       float: left;
