--- a/views/forms/editshow.html
+++ b/views/forms/editshow.html
@@ -5,36 +5,36 @@
             <label for="showName" class="col-md-3 control-label">Show name</label>
 
             <div class="col-md-8">
-                <input type="text" data-ng-model="show2.Name" class="form-control" id="showName" name="test" placeholder="Show name">
+                <input type="text" data-ng-model="show.Name" class="form-control" id="showName" name="test" placeholder="Show name">
             </div>
         </div>
         <div class="form-group row">
             <label for="showDescription" class="col-md-3 control-label">Show description</label>
 
             <div class="col-md-8">
-                <textarea class="form-control" data-ng-model="show2.Description" rows="3" id="showDescription"></textarea>
+                <textarea class="form-control" data-ng-model="show.Description" rows="3" id="showDescription"></textarea>
             </div>
         </div>
         <div class="form-group row">
             <label for="showImdbId" class="col-md-3 control-label">Show Imdb id</label>
 
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="show2.ImdbID" id="showImdbId" placeholder="Imdb id" disabled>
+                <input type="text" class="form-control" data-ng-model="show.ImdbID" id="showImdbId" placeholder="Imdb id" disabled>
             </div>
         </div>
         <div class="form-group row">
             <label for="rating" class="col-md-3 control-label">Rating</label>
 
             <div class="col-md-8">
-                <input type="number" step="0.1" class="form-control" data-ng-model="show2.Rating" id="rating" placeholder="Rating">
+                <input type="number" step="0.1" class="form-control" data-ng-model="show.Rating" id="rating" placeholder="Rating">
             </div>
         </div>
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
                 <button class="btn btn-default" ng-click="cancel()">Cancel</button>
-                <button class="btn btn-primary" ng-click="updateShow(show2, show.ShowId)">Submit</button>
+                <button class="btn btn-primary" ng-click="updateShow(show, show.ShowId)">Submit</button>
             </div>
         </div>
-        <input type="hidden" data-ng-model="show2.ShowID" id="ShowID">
+        <input type="hidden" data-ng-model="show.ShowID" id="ShowID">
     </div>
 </form>
