--- a/views/showSeason.html
+++ b/views/showSeason.html
@@ -6,7 +6,7 @@
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox"  ng-checked="isThisUserEpisode(episode.EpisodeId)">
+                    <input type="checkbox"  ng-checked="isThisUserEpisode(episode.EpisodeId)" ng-click="episodeCheck(episode.EpisodeId)">
                 </label>
             </div>
             <div class="content-wrapper">
