--- a/views/logged-in.html
+++ b/views/logged-in.html
@@ -1,5 +1,21 @@
 <div class="container">
-    <a href="#myshows" class="btn btn-primary navbar-btn pull-right">My Shows</a>
-    <a href="#shows" class="btn btn-primary navbar-btn pull-right">Shows</a>
-    <a href="#home" class="btn btn-primary navbar-btn pull-right">Home</a>
+    <div class="row">
+
+        <a href="#myshows" class="btn btn-primary navbar-btn pull-right">My Shows</a>
+        <a href="#shows" class="btn btn-primary navbar-btn pull-right">Shows</a>
+        <a href="#home" class="btn btn-primary navbar-btn pull-right">Home</a>
+
+    </div>
+
+<div class="shows-data row">
+    <div class="show col-md-4" ng-repeat="show in shows">
+        <div class="img-wrapper">
+            <img ng-src="{{show.Key.ShowImage}}" alt="{{show.Key.Name }}"/>
+        </div>
+        <p class="name"><a href="#show/{{show.Key.ImdbID }}">{{ show.Key.Name }}</a></p>
+        <progressbar animate="false" value="show.Value" type="success"></progressbar>
+
+
+    </div>
+</div>
 </div>
