--- a/views/forms/episode.html
+++ b/views/forms/episode.html
@@ -54,6 +54,6 @@
                 <button class="btn btn-primary" ng-click="addEpisode(episode)">Submit</button>
             </div>
         </div>
-        <input type="hidden" data-ng-model="show.ShowImdbId" value="{{}}" id="ShowID">
+        <input type="hidden" data-ng-model="episode.ShowImdbId" value="{{show.ShowImdbId}}" id="ShowID">
     </div>
 </form>
