--- a/views/logged-in.html
+++ b/views/logged-in.html
@@ -12,10 +12,8 @@
         <div class="img-wrapper">
             <img ng-src="{{show.Key.ShowImage}}" alt="{{show.Key.Name }}"/>
         </div>
+        <progressbar value="show.Value" type="success"><b>{{show.Value}}%</b></progressbar>
         <p class="name"><a href="#show/{{show.Key.ImdbID }}">{{ show.Key.Name }}</a></p>
-        <progressbar animate="false" value="show.Value" type="success"></progressbar>
-
-
     </div>
 </div>
 </div>
