--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,19 @@ body .shows-data .progress {
   height: 20px;
   margin-bottom: 5px;
 }
+body .loader-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+}
+body .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 150, 136, 0.85);
+  z-index: 9999;
+  color: white;
+}
