--- a/css/less/style.less
+++ b/css/less/style.less
@@ -188,4 +188,22 @@ body {
       margin-bottom: 5px;
     }
   }
+
+  .loader-wrapper {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+  }
+
+  .overlay {
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:rgba(0,150,136, 0.85);
+    z-index:9999;
+    color:white;
+  }
 }
