--- a/views/log-in.html
+++ b/views/log-in.html
@@ -4,7 +4,7 @@
 
         <form class="login-form">
             <div class="form-group">
-                <input type="email" class="form-control floating-label" data-ng-model="user.email" id="inputEmail" placeholder="Email">
+                <input type="text" class="form-control floating-label" data-ng-model="user.email" id="inputEmail" placeholder="Email">
             </div>
             <div class="form-group">
                 <input type="password" class="form-control floating-label" data-ng-model="user.password" id="inputPassword" placeholder="Password">
