--- a/views/register.html
+++ b/views/register.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="register-wrapper col-md-4 col-md-offset-4">
-        <h1>Log In !</h1>
+        <h1>Register !</h1>
         <form class="register-form">
             <div class="form-group">
-                <input type="email" class="form-control floating-label" data-ng-model="user.UserName" id="inputEmail" placeholder="Email">
+                <input type="text" class="form-control floating-label" data-ng-model="user.Email" id="inputEmail" placeholder="Email">
             </div>
             <div class="form-group">
                 <input type="password" class="form-control floating-label" data-ng-model="user.Password" id="inputPassword" placeholder="Password">
