--- a/views/register.html
+++ b/views/register.html
@@ -9,7 +9,7 @@
                 <input type="password" class="form-control floating-label" data-ng-model="user.Password" id="inputPassword" placeholder="Password">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control floating-label" data-ng-model="user.ConfirmPassword" id="inputPasswordConfirm" placeholder="Password">
+                <input type="password" class="form-control floating-label" data-ng-model="user.ConfirmPassword" id="inputPasswordConfirm" placeholder="Confirm Password">
             </div>
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
